# msg_logging

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt  log_msg.fbs  main.cpp
.github/workflows/: c-cpp.yml
bench/: benchmarks.cc  grpc_bench.cc  load_balance_bench.cc
grpc_server/: grpc_server_main.cc
lib/: LogEntrySerializer.cc  LogEntrySerializer.h  binding.h  log_client.h  log_server.h  pub_sub_proxy.h  publisher.h  pull_sub_proxy.h  subscriber.h
load_balance/: nginx-docker-compose.yml  nginx.conf
load_balance/haconfig/: ha-docker-compose.yml
load_balance/haconfig/conf/: haproxy.cfg
load_balance/nginx_config/: nginx-docker-compose.yml
pub_sub_zmq_proxy/: pub_sub_zmq_proxy_main.cc
pull_sub_zmq_proxy/: pull_sub_zmq_proxy_main.cc
zmq_consumer/: message_processor.h  zmq_consumer.cc  zmq_consumer.h  zmq_log_server.cc
